Fix footer spacing and missing svg ids

--- a/css/styles.css
+++ b/css/styles.css
@@ -463,6 +463,9 @@ button {
   width: 40px;
   height: 40px;
 }
+.footer-social-box {
+  margin-right: 80px;
+}
 
 .footer-social-link {
   display: flex;
@@ -485,7 +488,7 @@ button {
 }
 
 .footer-subscribe-box {
-  margin-left: auto;
+  margin-left: 0;
 }
 
 .footer-subscribe-title {
